rescript-ecosystem/packages/bindings/openapi/tests/snapshots/codegen_tests__datetime_schema.snap
---
source: tests/codegen_tests.rs
assertion_line: 74
expression: schema
---
// SPDX-License-Identifier: MPL-2.0
// Generated by rescript-openapi - DO NOT EDIT
// Source: DateTime API v1.0.0

open ApiTypes

module S = RescriptSchema.S

let eventSchema: S.t<event> = S.object(s => ({
  id: s.fieldOr("id", S.option(S.string), None),
  timestamp: s.fieldOr("timestamp", S.option(S.datetime), None),
  createdAt: s.fieldOr("created_at", S.option(S.datetime), None),
  scheduledFor: s.fieldOr("scheduled_for", S.option(S.string), None),
}: event))
