rescript-ecosystem/packages/bindings/openapi/tests/snapshots/codegen_tests__datetime_types.snap
---
source: tests/codegen_tests.rs
assertion_line: 72
expression: types
---
// SPDX-License-Identifier: MPL-2.0
// Generated by rescript-openapi - DO NOT EDIT
// Source: DateTime API v1.0.0

type event = {
  id: option<string>,
  timestamp: option<Date.t>,
  @as("created_at") createdAt: option<Date.t>,
  @as("scheduled_for") scheduledFor: option<Date.t>,
}
