rescript-ecosystem/packages/bindings/openapi/tests/snapshots/codegen_tests__petstore_schema.snap
---
source: tests/codegen_tests.rs
assertion_line: 39
expression: schema
---
// SPDX-License-Identifier: MPL-2.0
// Generated by rescript-openapi - DO NOT EDIT
// Source: Swagger Petstore v1.0.0

open ApiTypes

module S = RescriptSchema.S

let errorSchema: S.t<error> = S.object(s => ({
  code: s.field("code", S.int),
  message: s.field("message", S.string),
}: error))

let statusSchema: S.t<status> = S.union([
  S.literal(#Idle),
  S.literal(#Busy),
  S.literal(#Processing),
])

let petSchema: S.t<pet> = S.object(s => ({
  id: s.field("id", S.int),
  name: s.field("name", S.string),
  tag: s.fieldOr("tag", S.option(S.string), None),
  status: s.fieldOr("status", S.option(statusSchema), None),
}: pet))

let petsSchema = S.array(petSchema)
