rescript-ecosystem/packages/bindings/openapi/tests/snapshots/codegen_tests__recursive_types.snap
---
source: tests/codegen_tests.rs
assertion_line: 66
expression: types
---
// SPDX-License-Identifier: PMPL-1.0-or-later
// Generated by rescript-openapi - DO NOT EDIT
// Source: Recursive API v1.0.0

type rec node = {
  value: option<int>,
  next: option<node>,
  parent: option<node>,
}

type tree = {
  root: option<node>,
}
