rescript-ecosystem/packages/bindings/openapi/tests/snapshots/codegen_tests__standard_variants_types.snap
---
source: tests/codegen_tests.rs
assertion_line: 151
expression: types
---
// SPDX-License-Identifier: PMPL-1.0-or-later
// Generated by rescript-openapi - DO NOT EDIT
// Source: Swagger Petstore v1.0.0

type error = {
  code: int,
  message: string,
}

type status =
  | @as("IDLE") Idle
  | @as("BUSY") Busy
  | @as("PROCESSING") Processing

type pet = {
  id: int,
  name: string,
  tag: option<string>,
  status: option<status>,
}

type pets = array<pet>
